RHEL package has different libdir. Joy.
git-svn-id: https://svn.semantico.net/repos/systems/pm/modules/mcollective/branches/testing@24754 7307fc05-9cfe-0310-9a38-b0f27669c107

--- a/templates/server.cfg.erb
+++ b/templates/server.cfg.erb
@@ -1,5 +1,5 @@
 topicprefix = /topic/mcollective
-libdir = /usr/share/mcollective/plugins
+libdir = <%= libdir -%>
 logfile = /var/log/mcollective.log
 loglevel = info
 daemonize = 1
