--- a/templates/server.cfg.erb
+++ b/templates/server.cfg.erb
@@ -1,5 +1,5 @@
 topicprefix = /topic/mcollective
-libdir = <%= libdir -%>
+libdir = <%= libdir %>
 logfile = /var/log/mcollective.log
 loglevel = info
 daemonize = 1
