classesfile location chnages with 0.25
git-svn-id: https://svn.semantico.net/repos/systems/pm/modules/mcollective/branches/testing@24764 7307fc05-9cfe-0310-9a38-b0f27669c107

--- a/templates/server.cfg.erb
+++ b/templates/server.cfg.erb
@@ -26,3 +26,12 @@ factsource = yaml
 plugin.yaml = /etc/mcollective/facts.yaml
 <% end -%>
 
+<% if has_variable?('puppetversion') -%>
+# Puppet setup
+<%   if puppetversion =~ /^0\.24\./ -%>
+classesfile = /var/lib/puppet/state/classes.txt
+<%   else -%>
+classesfile = /var/lib/puppet/classes.txt
+<%   end -%>
+<% end -%>
+
